--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "private-chat-app",
+  "name": "private-chat-auth",
   "version": "1.0.0",
   "scripts": {
     "start": "node server.js"
