--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "private-chat-auth",
+  "name": "telegram-auth-chat",
   "version": "1.0.0",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "express": "^4.18.2",
-    "uuid": "^9.0.0",
-    "axios": "^1.4.0"
+    "uuid": "^9.0.0"
   }
 }
