--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "telegram-auth-chat",
+  "name": "private-chat-auth",
   "version": "1.0.0",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.6.8",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
   }
